<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.xwder</groupId>
    <artifactId>xwder-cloud</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>xwder-cloud-registry</module>
        <module>xwder-cloud-common</module>
        <module>xwder-cloud-mybatisgenerator</module>
        <module>xwder-cloud-gateway</module>
        <module>xwder-cloud-config-server</module>
        <module>xwder-cloud-config-client</module>

        <module>xwder-biz-model</module>
        <module>xwder-biz-api</module>
        <module>xwder-biz-book</module>
        <module>xwder-biz-manage</module>
        <module>xwder-biz-message</module>
        <module>xwder-biz-app</module>
        <module>xwder-cloud-admin-server</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.7.RELEASE</version>
        <relativePath/>
    </parent>

    <properties>
        <skipTests>true</skipTests>
        <docker.host>http://192.168.6.132:2375</docker.host>
        <docker.maven.plugin.version>1.1.0</docker.maven.plugin.version>
        <java.version>1.8</java.version>
        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
        <pagehelper-starter.version>1.2.10</pagehelper-starter.version>
        <pagehelper.version>5.1.8</pagehelper.version>
        <druid.version>1.1.10</druid.version>
        <hutool.version>4.5.7</hutool.version>
        <swagger2.version>2.7.0</swagger2.version>
        <mybatis-generator.version>1.3.7</mybatis-generator.version>
        <mybatis.version>3.4.6</mybatis.version>
        <mysql-connector.version>8.0.15</mysql-connector.version>
        <spring-data-commons.version>2.1.5.RELEASE</spring-data-commons.version>
        <tk.mybatis.version>2.1.5</tk.mybatis.version>
        <tk.mybatis.mapper.version>4.0.4</tk.mybatis.mapper.version>
        <jjwt.version>0.9.0</jjwt.version>
        <aliyun-oss.version>2.5.0</aliyun-oss.version>
        <logstash-logback.version>5.3</logstash-logback.version>
        <admin-starter-server.version>2.1.5</admin-starter-server.version>
        <xwder-cloud-common.version>1.0-SNAPSHOT</xwder-cloud-common.version>
        <xwder-cloud-mybatisgenerator.version>1.0-SNAPSHOT</xwder-cloud-mybatisgenerator.version>
        <xwder-cloud-security.version>1.0-SNAPSHOT</xwder-cloud-security.version>
        <xwder-biz-api.version>1.0-SNAPSHOT</xwder-biz-api.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!--Spring Cloud 相关依赖-->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--xwder-cloud通用模块-->
            <dependency>
                <groupId>com.xwder</groupId>
                <artifactId>xwder-cloud-common</artifactId>
                <version>${xwder-cloud-common.version}</version>
            </dependency>
            <!--xwder-biz-api通用模块-->
            <dependency>
                <groupId>com.xwder</groupId>
                <artifactId>xwder-biz-api</artifactId>
                <version>${xwder-biz-api.version}</version>
            </dependency>
            <!--xwder-cloud中mybatisgenerator生成模块-->
            <dependency>
                <groupId>com.xwder</groupId>
                <artifactId>xwder-cloud-mybatisgenerator</artifactId>
                <version>${xwder-cloud-mybatisgenerator.version}</version>
            </dependency>
            <!--xwder-cloud安全模块-->
            <dependency>
                <groupId>com.xwder</groupId>
                <artifactId>xwder-cloud-security</artifactId>
                <version>${xwder-cloud-security.version}</version>
            </dependency>

            <!--MyBatis分页插件starter-->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper-starter.version}</version>
            </dependency>
            <!--MyBatis分页插件-->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>
            <!--集成druid连接池-->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <!--Hutool Java工具包-->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <!--Swagger-UI API文档生产工具-->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${swagger2.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>${swagger2.version}</version>
            </dependency>
            <!-- MyBatis 生成器 -->
            <dependency>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-core</artifactId>
                <version>${mybatis-generator.version}</version>
            </dependency>
            <!-- MyBatis-->
            <!--<dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>-->
            <!-- tk.MyBatis-->
            <dependency>
                <groupId>tk.mybatis</groupId>
                <artifactId>mapper-spring-boot-starter</artifactId>
                <version>${tk.mybatis.version}</version>
            </dependency>
            <dependency>
                <groupId>tk.mybatis</groupId>
                <artifactId>mapper</artifactId>
                <version>${tk.mybatis.mapper.version}</version>
            </dependency>
            <!--Mysql数据库驱动-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector.version}</version>
            </dependency>
            <!--SpringData工具包-->
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-commons</artifactId>
                <version>${spring-data-commons.version}</version>
            </dependency>
            <!--JWT(Json Web Token)登录支持-->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <!-- 阿里云OSS -->
            <dependency>
                <groupId>com.aliyun.oss</groupId>
                <artifactId>aliyun-sdk-oss</artifactId>
                <version>${aliyun-oss.version}</version>
            </dependency>
            <!--集成logstash-->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback.version}</version>
            </dependency>
            <!--集成SpringBoot Admin监控-->
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-starter-server</artifactId>
                <version>${admin-starter-server.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>